--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn integration-test jacocoTestReport
+      - run: mvn integration-test jacoco-report
 
       - run:
           name: Save test results
