Inetgration MongoDB et premier test integration avec Mongo embarque

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#spring boot mongodb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=0
+spring.data.mongodb.database=tokyo-mongo
+
+#Log pour Mongo
+logging.level.org.springframework.boot.autoconfigure.mongo.embedded
+logging.level.org.mongodb
 
